# fastAPI2

./: .env  .gitignore  config.py  db.py  main.py  package.json  pyproject.toml
models/: good.py
public/: db.py  router_users.py  users.py
